# llm-study

./: .gitignore  pyproject.toml
graph-rag/: section2_basic_syntax.ipynb  section3_advanced_syntax.ipynb  section4_1.ipynb  section4_2.ipynb  section4_3.ipynb  section4_4.ipynb  section4_5.ipynb  section4_6.ipynb  section5.ipynb  section6.ipynb  section7.ipynb  section8.ipynb
langchain-basic/: langchain_RAG.ipynb  langchain_basics.ipynb
rag-basic/: section3.ipynb  section4.ipynb  section5.ipynb
